--- a/pom.xml
+++ b/pom.xml
@@ -2,87 +2,27 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>601dfad5-7be8-47f4-a62f-6df888b86612</groupId>
-	<artifactId>pub-common-health-check</artifactId>
-	<version>1.0.19-SNAPSHOT</version>
+	<groupId>com.mycompany</groupId>
+	<artifactId>github-actions-test</artifactId>
+	<version>1.0.0-SNAPSHOT</version>
 	<packaging>mule-application</packaging>
 
-	<name>${project.artifactId}</name>
+	<name>github-actions-test</name>
 
-	<description>health check</description>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		<mule.version>4.4.0</mule.version>
-		<mule.maven.plugin.version>3.5.4</mule.maven.plugin.version>
-		<tags />
-		<categories>[]</categories>
-		<maven.release.plugin.version>3.0.4</maven.release.plugin.version>
-		<project.scm.id>github</project.scm.id>
-	</properties>
 
-	<dependencies>
-		<dependency>
-			<groupId>com.mulesoft.modules</groupId>
-			<artifactId>mule-secure-configuration-property-module</artifactId>
-			<version>1.2.3</version>
-			<classifier>mule-plugin</classifier>
-		</dependency>
-		<dependency>
-			<groupId>com.mulesoft.connectors</groupId>
-			<artifactId>mule-sap-concur-connector</artifactId>
-			<version>4.2.0</version>
-			<classifier>mule-plugin</classifier>
-		</dependency>
-		<dependency>
-			<groupId>org.mule.connectors</groupId>
-			<artifactId>mule-db-connector</artifactId>
-			<version>1.13.3</version>
-			<classifier>mule-plugin</classifier>
-		</dependency>
-		<dependency>
-			<groupId>org.mule.modules</groupId>
-			<artifactId>mule-apikit-module</artifactId>
-			<version>1.5.11</version>
-			<classifier>mule-plugin</classifier>
-		</dependency>
-		<dependency>
-			<groupId>org.mule.connectors</groupId>
-			<artifactId>mule-http-connector</artifactId>
-			<version>1.6.0</version>
-			<classifier>mule-plugin</classifier>
-		</dependency>
-		<dependency>
-			<groupId>org.mule.connectors</groupId>
-			<artifactId>mule-sockets-connector</artifactId>
-			<version>1.2.2</version>
-			<classifier>mule-plugin</classifier>
-		</dependency>
-		<dependency>
-			<groupId>org.mule.modules</groupId>
-			<artifactId>mule-validation-module</artifactId>
-			<version>1.4.5</version>
-			<classifier>mule-plugin</classifier>
-		</dependency>
-		<dependency>
-			<groupId>org.mule.weave</groupId>
-			<artifactId>assertions</artifactId>
-			<version>1.0.2</version>
-			<scope>test</scope>
-		</dependency>
-	</dependencies>
+		<app.runtime>4.4.0</app.runtime>
+		<mule.maven.plugin.version>3.8.2</mule.maven.plugin.version>
+	</properties>
 
 	<build>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-release-plugin</artifactId>
-				<version>2.5.3</version>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-clean-plugin</artifactId>
-				<version>3.0.0</version>
+				<version>3.2.0</version>
 			</plugin>
 			<plugin>
 				<groupId>org.mule.tools.maven</groupId>
@@ -90,55 +30,39 @@
 				<version>${mule.maven.plugin.version}</version>
 				<extensions>true</extensions>
 				<configuration>
-					<cloudHubDeployment>
+					<armDeployment>
+						<muleVersion>${app.runtime}</muleVersion>
 						<uri>https://anypoint.mulesoft.com</uri>
-						<muleVersion>${mule.version}</muleVersion>
-						<username>${anypoint.userName}</username>
-						<password>${anypoint.password}</password>
-						<applicationName>${cloudhub.environment}-${project.artifactId}</applicationName>
-						<environment>${cloudhub.environment}</environment>
-						<workerType>${cloudhub.workerType}</workerType>
-						<workers>${cloudhub.workers}</workers>
-						<region>${cloudhub.region}</region>
-						<objectStoreV2>true</objectStoreV2>
-						<properties>
-							<maven.compiler.source>1.8</maven.compiler.source>
-							<maven.compiler.target>1.8</maven.compiler.target>
-							<mule.env>${cloudhub.environment}</mule.env>
-							<mule.encryption.key>${mule.encryption.key}</mule.encryption.key>
-						</properties>
-					</cloudHubDeployment>
+						<!--CONFIGURE THESE AS VARIABLES IN Github-->
+						<target>${target_server_name}</target>
+						<targetType>${target_type}</targetType>					      
+						<environment>Dev</environment>
+						<businessGroupId>${businessgroup_id}</businessGroupId>
+						<deploymentTimeout>${deployment_timeout}</deploymentTimeout>					      
+						<connectedAppClientId>${client_id}</connectedAppClientId>
+						<connectedAppClientSecret>${client_secret}</connectedAppClientSecret>
+						<connectedAppGrantType>client_credentials</connectedAppGrantType>
+					</armDeployment>
 					<classifier>mule-application</classifier>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>com.mulesoft.munit.tools</groupId>
-				<artifactId>munit-maven-plugin</artifactId>
-				<version>2.2.5</version>
-				<executions>
-					<execution>
-						<id>test</id>
-						<phase>test</phase>
-						<goals>
-							<goal>test</goal>
-							<goal>coverage-report</goal>
-						</goals>
-					</execution>
-				</executions>
-				<configuration>
-					<coverage>
-						<runCoverage>true</runCoverage>
-						<formats>
-							<format>html</format>
-						</formats>
-					</coverage>
-					<ignoreFiles>
-						<ignoreFile>global-error-handlers.xml</ignoreFile>
-					</ignoreFiles>
 				</configuration>
 			</plugin>
 		</plugins>
 	</build>
+
+	<dependencies>
+		<dependency>
+			<groupId>org.mule.connectors</groupId>
+			<artifactId>mule-http-connector</artifactId>
+			<version>1.7.3</version>
+			<classifier>mule-plugin</classifier>
+		</dependency>
+		<dependency>
+			<groupId>org.mule.connectors</groupId>
+			<artifactId>mule-sockets-connector</artifactId>
+			<version>1.2.3</version>
+			<classifier>mule-plugin</classifier>
+		</dependency>
+	</dependencies>
 
 	<repositories>
 		<repository>
@@ -151,12 +75,6 @@
 			<id>mulesoft-releases</id>
 			<name>MuleSoft Releases Repository</name>
 			<url>https://repository.mulesoft.org/releases/</url>
-			<layout>default</layout>
-		</repository>
-		<repository>
-			<id>Central</id>
-			<name>Central</name>
-			<url>http://repo1.maven.org/maven2/</url>
 			<layout>default</layout>
 		</repository>
 	</repositories>
@@ -173,18 +91,4 @@
 		</pluginRepository>
 	</pluginRepositories>
 
-        <scm>
-		<connection>scm:git:https://github.com/naaab/github-action-mule.git</connection>
-		<url>scm:git:https://github.com/naaab/github-action-mule.git</url>
-    	        <developerConnection>scm:git:https://github.com/naaab/github-action-mule.git</developerConnection>
-    	        <tag>pub-common-health-check-1.0.9</tag>
-        </scm>	
-
-	<distributionManagement>
-		<repository>
-			<id>github</id>
-			<name>github</name>
-			<url>https://maven.pkg.github.com/naaab/github-action-mule</url>  
-		</repository>
-	</distributionManagement>
 </project>
