--- a/.github/workflows/ci_cd_pipeline_develop.yml
+++ b/.github/workflows/ci_cd_pipeline_develop.yml
@@ -2,9 +2,12 @@ name: ci_cd_pipeline_develop.yml
 
 # Run on a new push to develop branch
 on:
-  push:
-    branches:
-      - develop
+  workflow_dispatch:
+    inputs:
+      releaseType:
+        description: 'Where to release (staging or prod)?'     
+        required: true
+        default: 'develop'
 
 
 jobs:
