--- a/.github/workflows/ci_cd_pipeline_develop.yml
+++ b/.github/workflows/ci_cd_pipeline_develop.yml
@@ -11,11 +11,11 @@ jobs:
   develop:
     uses: ./.github/workflows/build_deploy_reusable.yml
     with:
-      ANYPOINT_ENVIRONMENT: ${{ vars.ANYPOINT_ENVIRONMENT }}
+      ANYPOINT_ENVIRONMENT: ${{ env.ANYPOINT_ENVIRONMENT }}
       GITHUB_ENVIRONMENT: "Dev"      
-      ANYPOINT_BUSINESSGROUP: ${{ vars.ANYPOINT_BUSINESSGROUP }}
-      ANYPOINT_TARGET_NAME: ${{ vars.ANYPOINT_TARGET_NAME }}
-      ANYPOINT_TARGET_TYPE: ${{ vars.ANYPOINT_TARGET_TYPE }}
+      ANYPOINT_BUSINESSGROUP: ${{ env.ANYPOINT_BUSINESSGROUP }}
+      ANYPOINT_TARGET_NAME: ${{ env.ANYPOINT_TARGET_NAME }}
+      ANYPOINT_TARGET_TYPE: ${{ env.ANYPOINT_TARGET_TYPE }}
     secrets:
       ANYPOINT_CLIENT_ID: ${{ secrets.ANYPOINT_CLIENT_ID }}       
       ANYPOINT_CLIENT_SECRET : ${{ secrets.ANYPOINT_CLIENT_SECRET }}
